# ppa

./: ppa.cabal
app/: AST.hs  DataFlow.hs  Main.hs  MonotoneFramework.hs  Parser.hs  ParserMonad.hs  Scanner.hs  Set.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
tests/: DataFlowTest.hs  ParserTest.hs  ScannerTest.hs  scanner.hs
