cabal-version:      2.4
name:               ppa
version:            0.1.0
author:             Renan
maintainer:         renan.061@gmail.com

executable ppa
    main-is:          Main.hs
    build-depends:    base
    hs-source-dirs:   ./app
    default-language: Haskell2010

Test-Suite test-scanner
    type:             exitcode-stdio-1.0
    main-is:          ./ScannerTest.hs
    hs-source-dirs:   tests, app
    build-depends:    base, HUnit
    default-language: Haskell2010

Test-Suite test-parser
    type:             exitcode-stdio-1.0
    main-is:          ./ParserTest.hs
    hs-source-dirs:   tests, app
    build-depends:    base, HUnit
    default-language: Haskell2010
