cabal-version:      2.4
name:               ppa
version:            0.1.0
author:             Renan
maintainer:         renan.061@gmail.com

--Test-Suite test-scanner
--    type:             exitcode-stdio-1.0
--    main-is:          ScannerTest.hs
--    build-depends:    base, containers, matrix, HUnit
--    other-modules:    AST, ParserMonad, Scanner
--    hs-source-dirs:   tests, app
--    default-language: Haskell2010
--
--Test-Suite test-parser
--    type:             exitcode-stdio-1.0
--    main-is:          ParserTest.hs
--    build-depends:    base, containers, matrix, HUnit
--    other-modules:    AST, Parser, ParserMonad, Scanner
--    hs-source-dirs:   tests, app
--    default-language: Haskell2010

Test-Suite test-data-flow
    type:             exitcode-stdio-1.0
    main-is:          DataFlowTest.hs
    build-depends:    base, containers, matrix, HUnit
    other-modules:    AST, DataFlow, Parser, ParserMonad, Scanner, Set
    hs-source-dirs:   app, tests
    default-language: Haskell2010

